--- a/escola-qualidade-vida/frontend/public/historico.html
+++ b/escola-qualidade-vida/frontend/public/historico.html
@@ -14,7 +14,7 @@
                 <li><a href="./principal.html">Home</a></li>
                 <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
                 <li><a href="./relatorios.html">Relatórios</a></li>
-                <li><a href="./historico.html">Acompanhamento</a></li>
+                <li><a href="./historico.html">Histórico</a></li>
             </ul>
         </nav>
     </header>
