--- a/escola-qualidade-vida/frontend/public/ocorrencias.html
+++ b/escola-qualidade-vida/frontend/public/ocorrencias.html
@@ -16,6 +16,7 @@
         <li><a href="./principal.html">Home</a></li>
         <li><a href="./cadastroAluno.html">Cadastrar Aluno</a></li>
         <li><a href="./relatorios.html">Relatórios</a></li>
+        <li><a href="./historico.html">Histórico</a></li>
       </ul>
     </nav>
   </header>
