--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -30,8 +30,8 @@
             <p>Visualização e geração de relatórios sobre atividades e ocorrências.</p>
         </a>
 
-        <a class="a" id="acompanhamento" href="./acompanhamento.html">
-            <h2>Acompanhamento</h2>
+        <a class="a" id="historico" href="./historico.html">
+            <h2>Histórico</h2>
             <p>Monitoramento do progresso e bem-estar dos alunos.</p>
         </a>
 
@@ -149,6 +149,18 @@
     </footer>
 
     <script src="js/script.js"></script>
+
+
     
 </body>
+
+<body>
+  <div class="page-bg" aria-hidden="true"></div>
+
+  <!-- Se possível: envolva TODO o resto do seu conteúdo com esta div -->
+  <div class="content">
+    <!-- aqui fica o seu header, container, footer, etc (copie tudo para dentro) -->
+  </div>
+</body>
+
 </html>
