--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -14,6 +14,7 @@
         <li><a href="./principal.html">Home</a></li>
         <li><a href="./ocorrencias.html">Ocorrências</a></li>
         <li><a href="./relatorios.html">Relatórios</a></li>
+        <li><a href="./historico.html">Histórico</a></li>
       </ul>
     </nav>
   </header>
