coordenação quase completa

--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -39,6 +39,10 @@
             <h2>Criar Usuario</h2>
             <p>Monitoramento do progresso e bem-estar dos alunos.</p>
         </a>
+        <a class="a" id="Gerenciamento de usuarios" href="./gerenciamentoUsuarios.html">
+            <h2>Criar Usuario</h2>
+            <p>Monitoramento do progresso e bem-estar dos alunos.</p>
+        </a>
     </main>
 
         <!-- Chatbot Container -->
