parte de filtro funcionando(falta deixar independente)

--- a/escola-qualidade-vida/frontend/public/relatorios.html
+++ b/escola-qualidade-vida/frontend/public/relatorios.html
@@ -58,6 +58,8 @@
                 <tr>
                     <th>Aluno</th>
                     <th>Curso</th>
+                    <th>Ocorrências</th>
+                    <th>Turma</th>
                 </tr>
             </thead>
             <tbody>
