--- a/escola-qualidade-vida/frontend/public/principal.html
+++ b/escola-qualidade-vida/frontend/public/principal.html
@@ -14,36 +14,39 @@
         <h1>Qualidade de Vida Escolar</h1>
     </header>
 
+
     <main class="container">
-        <a class="a" id="cadastro-aluno" href="./cadastroAluno.html">
-            <h2>Cadastro de Aluno</h2>
-            <p>Formulário para cadastro de novos alunos no sistema do departamento.</p>
-        </a>
+    <a class="a" id="cadastro-aluno" href="./cadastroAluno.html">
+        <h2>Cadastro de Aluno</h2>
+        <p>Formulário para cadastro de novos alunos no sistema do departamento.</p>
+    </a>
 
-        <a class="a" id="ocorrencias" href="./ocorrencias.html">
-            <h2>Ocorrências</h2>
-            <p>Registro e acompanhamento de ocorrências envolvendo alunos.</p>
-        </a>
+    <a class="a" id="ocorrencias" href="./ocorrencias.html">
+        <h2>Ocorrências</h2>
+        <p>Registro e acompanhamento de ocorrências envolvendo alunos.</p>
+    </a>
 
-        <a class="a" id="relatorios" href="./relatorios.html">
-            <h2>Relatórios</h2>
-            <p>Visualização e geração de relatórios sobre atividades e ocorrências.</p>
-        </a>
+    <a class="a" id="relatorios" href="./relatorios.html">
+        <h2>Relatórios</h2>
+        <p>Visualização e geração de relatórios sobre atividades e ocorrências.</p>
+    </a>
 
-        <a class="a" id="historico" href="./historico.html">
-            <h2>Histórico</h2>
-            <p>Monitoramento do progresso e bem-estar dos alunos.</p>
-        </a>
+    <a class="a" id="historico" href="./historico.html">
+        <h2>Histórico</h2>
+        <p>Monitoramento do progresso e bem-estar dos alunos.</p>
+    </a>
 
-        <a class="a" id="cadastro usuario" href="./criar_usuario.html">
-            <h2>Criar Usuario</h2>
-            <p>Monitoramento do progresso e bem-estar dos alunos.</p>
-        </a>
-        <a class="a" id="Gerenciamento de usuarios" href="./gerenciamentoUsuarios.html">
-            <h2>Criar Usuario</h2>
-            <p>Monitoramento do progresso e bem-estar dos alunos.</p>
-        </a>
-    </main>
+    <a class="a" id="criar-usuario" href="./criar_usuario.html">
+        <h2>Criar Usuario</h2>
+        <p>Monitoramento do progresso e bem-estar dos alunos.</p>
+    </a>
+
+    <a class="a" id="gerenciamento-usuarios" href="./gerenciamentoUsuarios.html">
+        <h2>Gerenciamento de Usuarios</h2>
+        <p>Gerencie permissões dos administradores (somente coordenador).</p>
+    </a>
+</main>
+
 
         <!-- Chatbot Container -->
 <!-- Botão Flutuante de Chat -->
