--- a/escola-qualidade-vida/frontend/public/criar_usuario.html
+++ b/escola-qualidade-vida/frontend/public/criar_usuario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuários</title>
-    <link rel="stylesheet" href="./css/criar_usuario.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/criar_usuario.css') }}">
 </head>
 <body>
     <h2>Cadastro de Usuário</h2>
@@ -27,13 +27,13 @@
                 <option value="">Selecione...</option>
                 <option value="administrador">Administrador</option>
                 <option value="coordenador">Coordenador</option>
+                <option value="analista">Analista</option>
             </select>
         </div>
         <button type="submit">Cadastrar</button>
     </form>
     <div id="message" class="message"></div>
- <!-- Altere a linha do script para: -->
-<script src="./js/cadastro_usuario.js"></script>
-    
+
+    <script src="{{ url_for('static', filename='js/cadastro_usuario.js') }}"></script>
 </body>
 </html>
