Atualização do header

--- a/escola-qualidade-vida/frontend/public/historico.html
+++ b/escola-qualidade-vida/frontend/public/historico.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Qualidade de Vida Escolar</h1>
+        <h1>Histórico</h1>
         <nav>
             <ul>
                 <li><a href="./principal.html">Home</a></li>
                 <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
+                <li><a href="./ocorrencias.html">Ocorrências</a></li>
                 <li><a href="./relatorios.html">Relatórios</a></li>
-                <li><a href="./historico.html">Histórico</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <h2>Filtrar Ocorrências</h2>
 
