--- a/escola-qualidade-vida/frontend/public/cadastroAluno.html
+++ b/escola-qualidade-vida/frontend/public/cadastroAluno.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Qualidade de Vida Escolar</h1>
+    <h1>Cadastro de Alunos</h1>
     <nav>
       <ul>
         <li><a href="./principal.html">Home</a></li>
@@ -20,7 +20,6 @@
   </header>
 
   <main>
-    <h2>Cadastro de Aluno</h2>
 
     <div id="alerta" style="display:none;"></div>
 
