--- a/escola-qualidade-vida/frontend/public/relatorios.html
+++ b/escola-qualidade-vida/frontend/public/relatorios.html
@@ -11,13 +11,13 @@
 <body>
 
     <header>
-        <h1>Qualidade de Vida Escolar</h1>
+        <h1>Relatórios</h1>
         <nav>
             <ul>
                 <li><a href="./principal.html">Home</a></li>
                 <li><a href="./cadastroAluno.html">Cadastro de Aluno</a></li>
-                <li><a href="./relatorios.html">Relatórios</a></li>
-                <li><a href="./acompanhamento.html">Acompanhamento</a></li>
+                <li><a href="./ocorrencias.html">Ocorrências</a></li>
+                <li><a href="./historico.html">Histórico</a></li>
             </ul>
         </nav>
     </header>
