--- a/escola-qualidade-vida/frontend/public/historico.html
+++ b/escola-qualidade-vida/frontend/public/historico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/acompanhamento.css">
+    <link rel="stylesheet" href="./css/historico.css">
     <title>Histórico de Ocorrências</title>
 </head>
 <body>
